# whackathon-stocker

./: .gitignore  CONTRIBUTING.md  flake.nix  main.py  pyproject.toml  requirements.txt
.github/workflows/: nix-build.yml  nix-docker-release.yml
app/: functions.py  main.py  testing.py
app/Classes/: Account.py  Portfolio.py  Position.py  Transaction.py
app/CustomWidgets/: StockerAccounts.py  StockerAddPositionPopUp.py  StockerFooterFrame.py  StockerHeaderFrame.py  StockerPortfolio.py  StockerTabView.py  StockerTransactions.py
app/classes/: Account.py  Position.py
app/database/: portfolio.json
backend/app/: main.py
backend/app/classes/: Account.py  Portfolio.py  Position.py  Transaction.py
stocker/: __init__.py  account.py  main.py  models.py  portfolio.py  position.py  trade_entry.py
