[project]
name = "stocker"
version = "0.1.0"
description = "Portfolio management system for tracking investments"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.13",
    "pydantic>=2.11.7",
    "python-dateutil>=2.9.0.post0",
    "uvicorn>=0.34.3",
]

[project.scripts]
stocker = "stocker.main:main"

[build-system]
requires = ["hatchling", "editables"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["stocker"]

